--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="snaprank.example.labdadm.snaprank">
 
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,12 +13,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SearchActivity"></activity>
         <activity
-            android:name=".SignupActivity"
+            android:name=".activities.UploadImageActivity"
+            android:label="@string/upload_photo"
+            android:parentActivityName=".activities.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity" />
+        </activity>
+        <activity android:name=".activities.SearchActivity" />
+        <activity
+            android:name=".activities.SignupActivity"
             android:label="@string/register" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.LoginActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,18 +35,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
-        </activity>
-        <activity
-            android:name=".ViewPic">
-        </activity>
-        <activity
-            android:name=".ViewProfile">
-        </activity>
-        <activity
-            android:name=".LogrosActivity">
-        </activity>
+            android:name=".activities.MainActivity"
+            android:label="@string/app_name"></activity>
+        <activity android:name=".activities.ViewPicActivity"></activity>
+        <activity android:name=".activities.ViewProfileActivity"></activity>
+        <activity android:name=".activities.LogrosActivity"></activity>
     </application>
 
 </manifest>
